syntax = "proto3";
package duality.cwhooks;

import "gogoproto/gogo.proto";
import "duality/cwhooks/params.proto";

option go_package = "github.com/duality-labs/duality/x/cwhooks/types";

// GenesisState defines the cwhooks module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
